--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,57 @@
 accelerate==0.25.0
 annotated-types==0.6.0
 anyio==4.1.0
+attrs==23.1.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
+coloredlogs==15.0.1
 diffusers==0.24.0
 distro==1.8.0
 filelock==3.13.1
+flatbuffers==23.5.26
 fsspec==2023.12.2
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
 huggingface-hub==0.19.4
+humanfriendly==10.0
 idna==3.6
+imageio==2.33.1
 importlib-metadata==7.0.0
 Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+lazy_loader==0.3
+llvmlite==0.41.1
 MarkupSafe==2.1.3
 mpmath==1.3.0
 networkx==3.2.1
+numba==0.58.1
 numpy==1.26.2
+onnxruntime==1.16.3
 openai==1.3.8
+opencv-python-headless==4.8.1.78
 packaging==23.2
 Pillow==10.1.0
+platformdirs==4.1.0
+pooch==1.8.0
+protobuf==4.25.1
 psutil==5.9.6
 pydantic==2.5.2
 pydantic_core==2.14.5
+PyMatting==1.1.12
 PyYAML==6.0.1
+referencing==0.32.0
 regex==2023.10.3
+rembg==2.0.53
 requests==2.31.0
+rpds-py==0.13.2
 safetensors==0.4.1
+scikit-image==0.22.0
+scipy==1.11.4
 sniffio==1.3.0
 sympy==1.12
+tifffile==2023.12.9
 tokenizers==0.15.0
 torch==2.1.1
 tqdm==4.66.1
